--- a/MeetingRoomReservationSystem/.settings/org.eclipse.core.resources.prefs
+++ b/MeetingRoomReservationSystem/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//WebContent/WEB-INF/view/list-meetings.jsp=UTF-8
 encoding//src/com/mertgeren/dao/MeetingDAOImpl.java=UTF-8
